--- a/css/common.css
+++ b/css/common.css
@@ -578,10 +578,11 @@ body {
         text-indent: 2em;
         line-height: 27px;
         padding: 0 35px 0 29px;
-        margin-bottom: 33px;
+        margin-bottom: 28px;
     }
 
     .joinUs > p:nth-of-type(1) {
+        margin-top: -5px;
         margin-bottom: 0;
     }
 
